plugins 
{
	id 'java-library'
    id 'java-test-fixtures'
}

description = 'Basic feature to publish services as REST'

group = 'org.activecomponents.jadex'

if(System.getProperty("PUBLISH_SCRIPT_PATH"))
	apply from: System.getProperty("PUBLISH_SCRIPT_PATH")

java
{
	sourceCompatibility = '1.21'
}

repositories
{
	mavenCentral()
}

dependencies
{
	def v = System.getProperty('JADEX_VERSION')?:'+'
	implementation 'org.activecomponents.jadex:common:'+v
	implementation 'org.activecomponents.jadex:collection:'+v
	implementation 'org.activecomponents.jadex:traverser:'+v
	implementation 'org.activecomponents.jadex:javaparser:'+v
	implementation 'org.activecomponents.jadex:core:'+v
	implementation 'org.activecomponents.jadex:injection:'+v
	implementation 'org.activecomponents.jadex:execution:'+v
    implementation 'org.activecomponents.jadex:requiredservice:'+v
    implementation 'org.activecomponents.jadex:providedservice:'+v
	implementation 'org.activecomponents.jadex:serialization:'+v
	implementation 'org.activecomponents.jadex:binary:'+v
	implementation 'org.activecomponents.jadex:json:'+v
	implementation 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
	
	api 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
	api 'jakarta.servlet:jakarta.servlet-api:6.0.0'
	
	//api 'org.javassist:javassist:3.28.0-GA'
	
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
	testImplementation("io.rest-assured:rest-assured:5.5.6")
	testImplementation("org.hamcrest:hamcrest:3.0")
	

	//testFixturesImplementation sourceSets.main.output

	// Test-Files / Fixtures
    testFixturesImplementation 'org.activecomponents.jadex:common:'+v
    testFixturesImplementation 'org.activecomponents.jadex:collection:'+v
    testFixturesImplementation 'org.activecomponents.jadex:traverser:'+v
    testFixturesImplementation 'org.activecomponents.jadex:javaparser:'+v
    testFixturesImplementation 'org.activecomponents.jadex:core:'+v
    testFixturesImplementation 'org.activecomponents.jadex:injection:'+v
    testFixturesImplementation 'org.activecomponents.jadex:execution:'+v
    testFixturesImplementation 'org.activecomponents.jadex:requiredservice:'+v
    testFixturesImplementation 'org.activecomponents.jadex:providedservice:'+v
    testFixturesImplementation 'org.activecomponents.jadex:serialization:'+v

	testFixturesImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
    testFixturesImplementation 'io.rest-assured:rest-assured:5.5.6'
    testFixturesImplementation 'org.hamcrest:hamcrest:3.0'
}

processResources 
{
    from ('src/main/java') 
    {
        include '**/*.png'
        include '**/*.js'
        include '**/*.css'
        include '**/.system'
    }
}
